// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoresList Renders a list 1`] = `
<ul
  className="chores-list"
>
  <FlipMovePropConverter
    delay={0}
    disableAllAnimations={false}
    duration={350}
    easing="ease-in-out"
    enterAnimation="elevator"
    getPosition={[Function]}
    leaveAnimation="elevator"
    maintainContainerHeight={false}
    staggerDelayBy={0}
    staggerDurationBy={0}
    typeName="div"
    verticalAlignment="top"
  >
    <li
      className="chores-list__item"
      key="Chore 1"
    >
      <Chore
        allChores={Object {}}
        chore={
          Object {
            "currentPoints": 200,
            "due": 1518998400000,
            "frequency": 1,
            "lastDone": 1518912000000,
            "percentage": 100,
            "pointsPerTime": 100,
            "slug": "chore-1",
            "title": "Chore 1",
          }
        }
        game="game"
        user="test-user"
      />
    </li>
    <li
      className="chores-list__item"
      key="Chore 2"
    >
      <Chore
        allChores={Object {}}
        chore={
          Object {
            "currentPoints": 10,
            "due": 1518998400000,
            "frequency": 0,
            "lastDone": 1518998400000,
            "percentage": 100,
            "pointsPerTime": 10,
            "slug": "chore-2",
            "title": "Chore 2",
          }
        }
        game="game"
        user="test-user"
      />
    </li>
  </FlipMovePropConverter>
</ul>
`;

exports[`ChoresList Renders an empty list 1`] = `
<ul
  className="chores-list"
>
  <div>
    <p
      className="hide--large"
    >
      You can add chores or customise your character from the menu below - tap the arrow to open it.
    </p>
  </div>
  <FlipMovePropConverter
    delay={0}
    disableAllAnimations={false}
    duration={350}
    easing="ease-in-out"
    enterAnimation="elevator"
    getPosition={[Function]}
    leaveAnimation="elevator"
    maintainContainerHeight={false}
    staggerDelayBy={0}
    staggerDurationBy={0}
    typeName="div"
    verticalAlignment="top"
  />
</ul>
`;
